--- a/index.html
+++ b/index.html
@@ -7,30 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <table>
-      <thead>
-        <!-- table header -->
-        <th>name</th>
-        <th>age</th>
-      </thead>
-      <tbody>
-        <!-- table row -->
-        <tr>
-          <!-- table data -->
-          <td>Tom</td>
-          <td>36</td>
-        </tr>
-        <tr>
-          <td>Mary</td>
-          <td>21</td>
-        </tr>
-        <tr>
-          <td>Colton</td>
-          <td>36</td>
-        </tr>
-      </tbody>
-    </table>
-    <table>
+    <table class="wrapper">
       <thead>
         <th>Name</th>
         <th>Full Name</th>
